# nutter

./: .gitignore  Cargo.toml
src/: dockerfile_builder.rs  main.rs
src/cli/: mod.rs
templates/service_template/: Cargo.toml
templates/service_template/src/: main.rs
templates/service_template/src/app/: controller.rs  mod.rs  service.rs
templates/services/main/: Cargo.toml  Dockerfile
templates/services/main/src/: main.rs
templates/services/main/src/app/: mod.rs  service.rs
