[package]
name = "nutter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.19", features = ["derive"]}
dialoguer = "0.11.0"
anyhow = "1.0.89"
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread", "rt"]}
serde = {version = "1.0.210", features = ["derive"]}
toml = "0.8.19"
nutt-conf-parser = {version = "0.2.0"}
include_dir = "0.7.4"
walkdir = "2.5.0"
futures = "0.3.31"
